	  are always stale.
	- Fixed "plain" FTP listings (Henrik Nordstrom).
	- Fixed showing banner/logon message for top-level FTP
	  directories (Henrik Nordstrom).
	* Changes below have been made to SQUID_2_1_PATCH1
	- Fixed pinger packet size assertion.
	- Fixed WAIS forwarding.
	- Fixed dnsserver coredump bug caused by using both -D and
	  -s options.

Changes to Squid-2.0 (October 2, 1998):

	- Added NAT/Transparent hijacking code from Quinton Dolan.
	- Added actual filesystem usage to cachemgr 'storedir' page.
	  Only works for operating systems which support statvfs().
	- Fixed HTCP compile-time bugs.
	- Fixed quick_abort bugs.  Configured values are stored as
	  Kbytes, not bytes.
	- Removed fwdAbortFetch().  It breaks quick_abort and seems
	  mostly useless.
	- Changed storeDirSelectSwapDir() to skip swap directories
	  when their utilization is over the high water mark ratio.
	- Fixed off-by-one bug for dead neighbor detection (Joe Ramey).
	- fixed bugs in Content-Range header generation
	- changed the way Range requests are handled:
		- do not "advertise" our ability to process ranges at
		  all
		- on hits, handle simple ranges and forward complex
		  ones
		- on misses, fetch the whole document for simple ranges
		  and forward range request for complex ranges
	  The change is supposed to decrease the number of cases when
	  clients such as Adobe acrobat reader get confused when we
	  send a "200" response instead of "206" (because we cannot
	  handle complex ranges, even for hits) Note: Support for
	  complex ranges requires storage of partial objects.
	- Removed SNMP mib-2.system group from squid.
        - Removed SNMP ability to iterate through ipcache and friends.
        - Added SNMP ipcache/fqdncache basic statistics.
        - Converted SQUID-MIB to SMIv2 (RFC 1902).
        - Moved SQUID-MIB to enterprises section of the tree in preparation
          of the split into PROXY-MIB & SQUID-MIB.
        - Corrected minor errors in SQUID-MIB.